--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 README file
+
+We completed the second extra credit task "Expand environment variables embedded in arguments [2]." 
+******* Mention line number that this was done at once we finalize our project ***
